--- a/src/app/matchup-overview/matchup/matchup.component.html
+++ b/src/app/matchup-overview/matchup/matchup.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-wrap justify-center gap-4 p-4 text-xs">
   <overview class="z-10" [teams]="overview"></overview>
-  <summary class="z-10" [teams]="summary"></summary>
+  <summary class="z-10" [teams]="summary" style="list-style: none"></summary>
   <speedchart class="z-10" [speedchart]="speedChart"></speedchart>
   <typechart class="z-10" [typecharts]="typeChart"></typechart>
   <movechart class="z-10 h-128" [teams]="moveChart"></movechart>
