--- a/src/app/planner/typechart/typechart.component.html
+++ b/src/app/planner/typechart/typechart.component.html
@@ -11,7 +11,7 @@
         >
           <img
             class=""
-            src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
+            src="../../../../assets/icons/types/{{ type.toLowerCase() }}.png"
             alt="{{ type }}"
           />
         </th>
@@ -46,7 +46,7 @@
         >
           <img
             class=""
-            src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
+            src="../../../../assets/icons/types/{{ type.toLowerCase() }}.png"
             alt="{{ type }}"
           />
         </th>
