--- a/src/app/matchup-overview/matchup/summary/summary.component.html
+++ b/src/app/matchup-overview/matchup/summary/summary.component.html
@@ -104,7 +104,7 @@
       <td>
         <img
           *ngFor="let type of pokemon.types"
-          src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
+          src="../../../../assets/icons/types/{{ type.toLowerCase() }}.png"
           alt="{{ type }}"
         />
       </td>
