revert to old sprites

--- a/src/app/matchup-overview/matchup/typechart/typechart.component.html
+++ b/src/app/matchup-overview/matchup/typechart/typechart.component.html
@@ -26,7 +26,7 @@
         >
           <img
             class=""
-            src="../../../../assets/icons/types/{{type.toLowerCase() }}.png"
+            src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
             alt="{{ type }}"
           />
         </th>
@@ -65,7 +65,7 @@
         >
           <img
             class=""
-            src="../../../../assets/icons/types/{{type.toLowerCase() }}.png"
+            src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
             alt="{{ type }}"
           />
         </th>
