--- a/src/app/planner/summary/summary.component.html
+++ b/src/app/planner/summary/summary.component.html
@@ -91,7 +91,7 @@
         <div class="flex justify-center space-x-2 h-1/2">
           <img
             *ngFor="let type of pokemon.types"
-            src="../../../../assets/icons/types/{{type.toLowerCase() }}.png"
+            src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
             alt="{{ type }}"
           />
         </div>
