--- a/src/app/pokemon-form/pokemon-form.component.html
+++ b/src/app/pokemon-form/pokemon-form.component.html
@@ -89,7 +89,7 @@
       >
         <img
           class=""
-          src="../../../../assets/icons/types/{{type.toLowerCase() }}.png"
+          src="https://play.pokemonshowdown.com/sprites/types/{{ type }}.png"
           alt="{{ type }}"
         />
         <input
