--- a/src/app/matchup-overview/matchup/speedchart/speedchart.component.html
+++ b/src/app/matchup-overview/matchup/speedchart/speedchart.component.html
@@ -1,5 +1,9 @@
 <div class="flex w-full px-1 bg-slate-400 rounded-t-xl">
   <div class="flex w-full pb-1 border-b border-slate-300">
+    <div class="flex mx-1 mt-2 space-x-1 w-fit">
+      <p class="font-bold">Lvl:</p>
+      <p class="font-semibold">{{ level }}</p>
+    </div>
     <h1 class="w-full text-xl font-bold text-center">Speed Table</h1>
     <div class="relative w-8 mx-1 mt-2 ml-auto">
       <div
