homepage menu changes for mobile

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,50 @@
 <div class="flex flex-col justify-between h-screen">
   <header class="z-10 flex w-full border-b-2 bg-slate-300 border-slate-400 p-2">
-    <div class="flex items-center justify-center w-32 hover:bg-slate-200">
-      <a class="text-xl" routerLink="/">DraftZone</a>
-    </div>
-    <div class="flex">
-      <div class="flex items-center h-full px-3 hover:bg-slate-200">
-        <a routerLink="/draft">Drafts</a>
+    <div class="flex relative">
+      <button
+        (click)="menuDropdown = !menuDropdown"
+        id="dropdownButton"
+        class="block w-8 px-1 py-1 text-gray-800 bg-gray-200 rounded-md sm:hidden focus:outline-none"
+      >
+        <img class="" src="../assets/icons/menu.svg" />
+      </button>
+
+      <div
+        *ngIf="menuDropdown"
+        (click)="menuDropdown = false"
+        class="sm:flex block sm:hidden flex-col absolute top-full left-0 bg-white border border-gray-200 rounded-md shadow-md"
+      >
+        <div class="flex items-center h-full px-3 hover:bg-slate-200">
+          <a routerLink="/draft">Drafts</a>
+        </div>
+        <div class="flex items-center h-full px-3 hover:bg-slate-200">
+          <a class="opacity-50">Planner</a>
+        </div>
+        <div class="flex items-center h-full px-3 hover:bg-slate-200">
+          <a class="opacity-50">Statistics</a>
+        </div>
       </div>
-      <div class="flex items-center h-full px-3 hover:bg-slate-200">
-        <a class="opacity-50">Planner</a>
-      </div>
-      <div class="flex items-center h-full px-3 hover:bg-slate-200">
-        <a class="opacity-50">Statistics</a>
+      <div class="hidden sm:block sm:flex">
+        <div
+          class="flex items-center justify-center w-32 hover:bg-slate-200 rounded"
+        >
+          <a class="text-xl" routerLink="/">DraftZone</a>
+        </div>
+        <div class="flex">
+          <div class="flex items-center h-full px-3 hover:bg-slate-200 rounded">
+            <a routerLink="/draft">Drafts</a>
+          </div>
+          <div class="flex items-center h-full px-3 hover:bg-slate-200 rounded">
+            <a class="opacity-50">Planner</a>
+          </div>
+          <div class="flex items-center h-full px-3 hover:bg-slate-200 rounded">
+            <a class="opacity-50">Statistics</a>
+          </div>
+        </div>
       </div>
     </div>
     <div class="flex justify-end flex-grow h-full">
-      <div class="px-4  hover:bg-slate-200 h-full">
+      <div class="px-4 hover:bg-slate-200 h-full">
         <ng-container *ngIf="auth.isAuthenticated() | async; else loggedOut">
           <div
             *ngIf="auth.user() | async as user"
