--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,9 +1,11 @@
 <div class="flex flex-col items-center w-full h-full px-6 py-8">
-  <div class="flex items-center mb-6 text-6xl font-semibold h-1/3">
+  <div class="flex items-center justify-center w-full mb-6 h-1/4">
     <img class="w-16 h-16 mr-2" src="../../../13luken.ico" alt="logo" />
-    Pokemon DraftZone
+    <h1 class="text-6xl font-semibold w-fit">Pokemon DraftZone</h1>
   </div>
-  <div class="w-2/3 p-4 overflow-y-auto rounded-lg shadow bg-slate-300 h-1/2">
+  <div
+    class="w-5/6 sm:w-2/3 p-4 overflow-y-auto rounded-lg shadow bg-slate-300 h-2/3"
+  >
     <h1 class="pb-2 text-xl font-bold">News and Updates</h1>
     <ul class="space-y-3">
       <li>
