matchup changes for mobile

--- a/src/app/matchup-overview/matchup-overview.component.html
+++ b/src/app/matchup-overview/matchup-overview.component.html
@@ -9,7 +9,7 @@
       </button>
     </div>
     <div class="flex justify-center flex-grow">
-      <div *ngIf="matchupData" class="flex flex-wrap justify-between gap-8">
+      <div *ngIf="matchupData" class="flex flex-wrap justify-between gap-x-8">
         <div class="w-full text-center sm:w-auto">
           <p class="text-sm font-semibold text-gray-500">League Name</p>
           <p class="text-xl font-bold">{{ matchupData.leagueName }}</p>
