--- a/src/app/opponent-overview/opponent-score/opponent-score.component.html
+++ b/src/app/opponent-overview/opponent-score/opponent-score.component.html
@@ -1,3 +1,4 @@
+<loading *ngIf="!scoreForm"></loading>
 <form *ngIf="scoreForm" [formGroup]="scoreForm" (submit)="onSubmit()">
   <div class="flex w-flex">
     <div class="w-1/4">
