--- a/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
+++ b/src/app/opponent-overview/opponent-form/opponent-form-core/opponent-form-core.component.html
@@ -4,7 +4,7 @@
   class="p-2 m-2 space-y-3 bg-red-300 shadow-md team shadow-red-600 rounded-xl"
 >
   <div class="w-full">
-    <div class="grid grid-cols-4 gap-4">
+    <div class="grid sm:grid-cols-4 grid-cols-2 gap-x-4">
       <div>
         <label class="block mb-1 font-bold">Team Name</label>
         <input
@@ -37,7 +37,7 @@
       <button
         type="button"
         (click)="addNewPokemon()"
-        class="w-1/6 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+        class="w-32 px-1 my-3 font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
       >
         Add Pokemon
       </button>
@@ -46,7 +46,7 @@
   <div class="flex justify-end w-full">
     <button
       type="submit"
-      class="w-1/5 p-1 mx-4 text-xl font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
+      class="w-24 p-1 mx-4 text-xl font-bold rounded-full shadow bg-slate-200 hover:bg-slate-100 shadow-slate-600"
     >
       Submit
     </button>
