--- a/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
+++ b/src/app/opponent-overview/opponent-preview/opponent-preview.component.html
@@ -1,6 +1,6 @@
 <div class="flex space-x-2">
   <div
-    class="w-1/6 max-w-28 bg-cyan-100 p-1 border-2 border-cyan-200 rounded-xl"
+    class="w-1/6 max-w-28 sm:block hidden bg-cyan-100 p-1 border-2 border-cyan-200 rounded-xl"
   >
     <div
       class="h-auto p-1 m-1 sm:p-2 sm:m-2 shadow-md bg-cyan-300 rounded-xl shadow-cyan-600"
